--- a/frontend/web/css/media.css
+++ b/frontend/web/css/media.css
@@ -14,6 +14,10 @@
         max-width: 1200px;
         margin: auto;
     }
+    .limit-width-1168 {
+        max-width: 1168px;
+        margin: auto;
+    }
     .desktop-hidden {
         display: none !important;
     }
@@ -124,9 +128,10 @@
 
     .advantages__list li {
         max-width: 100%;
-        align-items: flex-start;
+        align-items: center;
         justify-content: flex-start;
         margin: 10px 0;
+        width: 100%;
     }
 
     .advantages__list li p {
@@ -375,11 +380,11 @@
     .database .database__item:nth-child(1) {
         padding-top: 40px;
     }
-    
+
     .registration__items {
         flex-direction: column;
     }
-    
+
     .registration__item {
         width: 100%;
     }
@@ -571,7 +576,7 @@
 }
 
 
-@media (max-width: 700px) { 
+@media (max-width: 700px) {
     .mfo_card {
         width: 100%;
     }
@@ -655,7 +660,7 @@
     }
 
     .content-main-info__box {
-        padding-right: 10px; 
+        padding-right: 10px;
     }
 
     .content-main-info__list {
