--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -4394,6 +4394,16 @@ input.subscribe-form-item__btn.subscribe-form-item__btn--btn-submit, input.subsc
     padding-left: 15px;
 }
 
+.content-text p{
+    line-height: 1.45;
+    margin: 9px 0;
+    font-size: 16px;
+    font-weight: 300;
+    color: #111;
+    position: relative;
+    padding-left: 15px;
+}
+
 .content-text li:before {
     position: absolute;
     content: '';
