--- a/frontend/web/css/media.css
+++ b/frontend/web/css/media.css
@@ -28,6 +28,7 @@
         display: flex;
         margin-left: -25px;
         margin-bottom: 0;
+        margin-top: 0;
     }
     .header-nav__item {
         position: relative;
