--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -4496,3 +4496,14 @@ p {
 .aktsii-article__content li a {
     display: initial;
 }
+
+.header-nav__language{
+    display: flex;
+    background-color: #3b9fd8;
+    font-size: 20px;
+    line-height: 1.1;
+    font-weight: 600;
+    padding: 8px 20px;
+    margin: 0 -20px;
+    color: #fff;
+}
