--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -2349,7 +2349,7 @@ a.scrollup-right {
     margin-right: 10px;
 }
 
-#rating .offers-show-all-btn {
+#rating .offers-show-all {
     display: inline-block;
     cursor: pointer;
     background: #fff;
