--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -4674,3 +4674,21 @@ p {
     border-radius: 6px;
     background-color: #141618;
 }
+
+.full {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    padding: 8%;
+    background: rgba(0,0,0,0.3) center no-repeat;
+    background-size: contain;
+    background-origin: content-box;
+    z-index: 3;
+    cursor: zoom-out;
+}
+a:focus + .full {
+    display: block;
+}
