--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -3951,7 +3951,7 @@ input.subscribe-form-item__btn.subscribe-form-item__btn--btn-submit, input.subsc
     display: block;
     width: 36px;
     height: 36px;
-    line-height: 22px;
+    line-height: 36px;
     margin-top: 4.5px;
     margin-bottom: 4.5px;
     border-radius: 50%;
@@ -4551,8 +4551,8 @@ p {
 }
 
 .aktsii-article__content p {
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
     margin-top: 18px;
 }
 
@@ -4691,4 +4691,34 @@ p {
 }
 a:focus + .full {
     display: block;
+}
+
+.read-author-info {
+    display: -ms-flexbox;
+    display: -ms-flex;
+    display: flex;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    margin-top: 35px;
+}
+.entry-author {
+    background-color: rgba(0,0,0,.04);
+    overflow: hidden;
+    padding: 30px 30px 25px;
+    box-sizing: border-box;
+}
+.author-avatar {
+    -ms-flex: 0 0 80px;
+    flex: 0 0 80px;
+    margin-right: 30px;
+}
+.round-images img {
+    border-radius: 50%;
+}
+.author-description h4 {
+    margin-top: 0;
+    color: #303133;
+    font-weight: 600;
+    font-family: PT Sans;
+    line-height: 1.2;
 }
