--- a/frontend/web/css/media.css
+++ b/frontend/web/css/media.css
@@ -59,7 +59,7 @@
         background-color: rgba(255,255,255,.03);
     }
 
-    .nav-tabs>li.active>a {
+    .nav-tabs-mfo>li.active>a {
         border-bottom-width: 2px;
         border-bottom-style: solid;
     }
@@ -198,7 +198,7 @@
         height: 500px;
     }
 
-    .nav-tabs {
+    .nav-tabs-mfo {
         padding: 0px 40px;
     }
 
