--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -4412,20 +4412,32 @@ input.subscribe-form-item__btn.subscribe-form-item__btn--btn-submit, input.subsc
     padding-left: 15px;
 }
 
+/*.content-text ul li:before {*/
+/*    position: absolute;*/
+/*    content: '';*/
+/*    top: 50%;*/
+/*    transform: translateY(-50%);*/
+/*    left: 0;*/
+/*    width: 6px;*/
+/*    height: 6px;*/
+/*    border-radius: 50%;*/
+/*    background: #2c8dc4;*/
+/*    -webkit-transform: translateY(-50%);*/
+/*    -moz-transform: translateY(-50%);*/
+/*    -ms-transform: translateY(-50%);*/
+/*    -o-transform: translateY(-50%);*/
+/*}*/
+
 .content-text ul li:before {
-    position: absolute;
-    content: '';
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0;
+    float: left;
     width: 6px;
     height: 6px;
+    margin-right: 8px;
+    margin-top: 6px;
     border-radius: 50%;
     background: #2c8dc4;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
+    content: '';
+    margin-top: 10px !important;
 }
 label{
     font-weight: 400 !important;
