--- a/frontend/web/css/media.css
+++ b/frontend/web/css/media.css
@@ -475,6 +475,26 @@
     .faq__col a:not(:last-child) {
         margin-bottom: 12px;
     }
+    .offer-row-col {
+        float: left;
+        font-size: 16px!important;
+        font-weight: 700;
+        clear: both;
+        text-align: left;
+    }
+    .offer-col {
+        text-align: right;
+        font-size: 20px;
+        font-weight: 700;
+    }
+    .firstloan {
+        padding: 0;
+    }
+    .firstloan-col {
+        width: 100%!important;
+        padding: 12px 15px!important;
+        display: block;
+    }
 }
 
 
