--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -2162,7 +2162,7 @@ a.scrollup-right {
 }
 
 .offer-logo {
-    width: 165px;
+    width: 160px;
     margin: 20px 0 0 10px;
 }
 
@@ -2210,7 +2210,7 @@ a.scrollup-right {
 }
 
 #rating .offers-card-btn {
-    width: 180px;
+    width: 150px;
     background: #fda729;
     border-radius: 4px;
     border: 1px solid #fda729;
@@ -2852,13 +2852,12 @@ input.subscribe-sidebar-item__btn.subscribe-sidebar-item__btn--btn-submit {
     background: #eff1f1;
     z-index: 2;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
-    padding-top: 10px;
+    padding: 5px 20px 5px;
 }
 
 .firstloan-col {
-    padding: 0 0 10px;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -3239,7 +3238,7 @@ input.subscribe-sidebar-item__btn.subscribe-sidebar-item__btn--btn-submit {
 }
 
 .offers-card-btn {
-    width: 180px;
+    width: 150px;
     background: #fda729;
     border-radius: 4px;
     border: 1px solid #fda729;
@@ -3265,7 +3264,12 @@ input.subscribe-sidebar-item__btn.subscribe-sidebar-item__btn--btn-submit {
 }
 
 .mfo-offer-recom-container .offer-logo {
-    margin: 0 0 0 10px;
+    margin: 0;
+}
+
+.mfo_card_info_rating_data .rating__stars {
+    min-width: 115px;
+    max-width: 115px;
 }
 
 .mfo-about__video {
