--- a/frontend/web/css/media.css
+++ b/frontend/web/css/media.css
@@ -797,8 +797,14 @@
         font-size: 15px;
     }
     .bank-contacts-mfo-about {
-        padding: 5px 15% 0;
+        /*padding: 5px 15% 0;*/
+        padding: 5px 5% 0;
     }
+
+    .bank-contacts-mfo-about .mfo-about__table .mfo-about__col-right {
+        text-align: left;
+    }
+
     .bank-offers-horizontal .mfo_card {
         flex-direction: column;
         width: 273px;
@@ -857,12 +863,12 @@
         text-align: left;
         margin-top: 20px;
     }
-    .n-nav-tabs {
+    .n-nav-tabs-bank {
         flex-direction: column;
         align-items: center;
         padding: 0;
     }
-    .n-nav-tabs>li>a span {
+    .n-nav-tabs-bank>li>a span {
         font-size: 12px;
         text-transform: uppercase;
     }
